--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: IWAXY.COM
 
   <h1>我的文章在别处</h1>
   <ul class="posts">
-    <li><span>10 Apr 2013</span> &raquo; <a href="http://bbs.pediy.com/showthread.php?t=168003">C语言学习抄书笔记（连载中）</a></li>
+    <li><span>10 Apr 2013</span> &raquo; <a href="http://bbs.pediy.com/showthread.php?t=168003" target=_blank>C语言学习抄书笔记（连载中）</a></li>
    </ul>
 
 </div>
